Trying to fix spacing again

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -164,8 +164,8 @@ p {
 	gap: 1rem;
 }
 
-#create-own {
-	padding-top: 0;
+.content > .create-own {
+    margin-top: -2rem;
 }
 
 .create-own iframe {
